# ML_Predict_Churn

./: .gitignore  Makefile  README.md  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main_ml-predict-churn-braian.yml  main_ml-predict-churn.yml
docs/: architecture.md  ml_canvas.md  model_card.md  monitoring.md
models/trained/: logistic_pipeline.joblib  mlp_bundle.joblib
notebooks/: 01_eda_baseline.ipynb  02_mlp_pytorch.ipynb  mlflow.db
src/: __init__.py
src/api/: main.py  schemas.py
src/data/: column_mapping.py  feature_pipeline.py  load_data.py  preprocess.py  schemas.py
src/features/: build_features.py
src/models/: evaluate.py  mlp.py  predict.py  train.py  train_all_baselines.py  train_baseline.py  train_mlp.py
src/pipeline/: pipeline.py
src/utils/: paths.py
tests/: test_api.py  test_preprocess.py  test_schema.py  test_smoke.py
