[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_predict_churn"
version = "0.1.0"
description = "Projeto de previsao de churn em telecom com pipeline end-to-end."
authors = [
    { name = "Braian Montoro" }
]
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
    "scikit-learn",
    "fastapi",
    "gunicorn",
    "uvicorn",
    "pydantic",
    "pandera"
]

[project.optional-dependencies]
dev = [
    "httpx",
    "jupyter",
    "pytest",
    "ruff",
]
train = [
    "matplotlib",
    "mlflow",
    "seaborn",
    "torch",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    ".cache",
    "__pycache__",
    "mlruns",
    "models",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
